--- a/style.css
+++ b/style.css
@@ -30,7 +30,12 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 50px 0;
+    margin: 25px 0;
+}
+
+article>h2{
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 article {
